Spacing fix

--- a/wdd-130/poas/styles/animation_principle.css
+++ b/wdd-130/poas/styles/animation_principle.css
@@ -2,7 +2,7 @@
 
 #container {
     display: grid;
-    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns:1fr 1fr .3fr 1fr 1fr;
     grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 
@@ -19,7 +19,7 @@
     justify-content: center;width:fit-content;height: fit-content; font-family: "Roboto Mono";
 
 }
-#blank{grid-column: 3; width:25px;}
+#blank{grid-column: 3; }
 #text_1{ grid-row: 1; grid-column: 2;}
 #part_1{grid-row: 1; grid-column: 1;}
 #text_2{grid-row:2; grid-column: 2;} 
